# matmul

benchmark/: run.sh
src/: CMakeLists.txt  aligned_allocator.hpp  main.cpp  matrix.hpp  naive.hpp  opt.hpp
